crates/keron-lang/tests/corpus/errors/check/secret_coalesce_rejected.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: `??` requires the left side to be a nullable type (`T?`), found `Secret`
  --> 7:17
  |
7 | val s: Secret = secret("op://Vault/Item/field") ?? secret("op://Vault/Backup/field")
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
